chore: kotlin rules update