@@ -2,75 +2,130 @@
 apply: always
 ---
 
-Kotlin Multiplatform/JVM Project - AI Instructions
+# Kotlin Project Rules
 
-## Tech Stack
+## 1. Build & Dependencies
 
-- **Kotlin**: Always use the latest version
-- **Build System**: Amper (latest dev version)
-- **Java Target**: 25
-- **Platform**: Kotlin Multiplatform
+### Amper Build System
+- Always use Amper — never Gradle build scripts
+- Add `src@target` only when platform-specific code is truly necessary
+- For JVM-only: single JVM target, no `expect`/`actual`
+- Config reference: [common.module-template.yaml](https://github.com/sureshg/kmp-amper/blob/main/shared/common.module-template.yaml), [module.yaml](https://github.com/sureshg/kmp-amper/blob/main/shared/module.yaml)
+- Docs: [amper.org/dev](https://amper.org/dev/)
 
-## Core Libraries
+### Versions & Dependencies
+- **Kotlin**: Latest (check `libs.versions.toml`)
+- **Java Target**: 25 (`--enable-preview` when needed)
+- **Platform**: Kotlin Multiplatform by default (JVM, Native, JS, Wasm)
+- Always check `libs.versions.toml` for existing references before adding dependencies
+- Prefer Kotlin/Java stdlib and latest idioms before third-party libraries
+- Never use Guava, Apache Commons, or heavy Java utility libraries
+- Use latest stable versions
 
-- `kotlinx-coroutines` - Asynchronous programming
-- `kotlinx-serialization` - JSON/XML serialization
-- `kotlinx-datetime` - Date/time handling
-- `kotlinx-io` - I/O operations
-- `ktor-client` - HTTP client
-- `io.github.oshai:kotlin-logging` - Logging
-- `dev.whyoleg.cryptography:cryptography-core` - Cryptography
+### Core Libraries (Prefer These First)
+- `kotlinx-coroutines` — async/concurrency
+- `kotlinx-serialization` — JSON/CBOR/Protobuf
+- `kotlinx-datetime` — date/time
+- `kotlinx-io` — I/O and byte buffers
+- `ktor-client` — HTTP (`ktor-client-java` engine for JVM-only)
+- `kotlin-logging` — logging (`io.github.oshai:kotlin-logging`)
+- **JVM-only**: prefer JDK APIs (`java.net.http.HttpClient`, `java.security`, `javax.crypto`) when multiplatform portability is not needed
 
-**Important**:
+## 2. Language & Style
 
-- Always check `libs.versions.toml` for existing library versions before adding or updating dependencies.
-- Use the latest stable versions of core libraries when adding new dependencies.
+### Idiomatic Kotlin
+- Write **clean, clear, concise, idiomatic** Kotlin — #1 priority
+- Functional style: `map`, `filter`, `fold`, `buildList`
+- `data class` over manual `toString`/`hashCode`/`equals`
+- Default parameter values over builder pattern or overloads
+- Composition over inheritance
+- `sealed class`/`sealed interface` for restricted hierarchies — but don't over-abstract; `enum class` is often enough, and sometimes no abstraction is best
+- `require`/`check`/`error` for preconditions
+- `when` expressions over `if-else` chains
+- Destructuring declarations where they improve readability
+- Simple `try-catch` is often clearer than wrapping everything in `Result` — use the right tool for the situation
+- Use context parameters judiciously where they genuinely reduce boilerplate
+- Don't over-abstract — use abstractions only when they provide clear value and safety
 
-## Code Standards
+### Null Safety
+- Leverage null safety fully — avoid `!!` except in tests
+- Use `?.let {}`, `?:`, safe calls idiomatically
+- Prefer non-nullable types; make nullability explicit
+- `Nothing` return type for functions that always throw
 
-### Style & Quality
+### Scope Functions & Extensions
+- Don't overuse scope functions — avoid nested `.let{}`, `.run{}`, `.apply{}` chains
+- A simple `if`/`val` is often clearer than `.let { }`
+- Extension functions only when reused in multiple places — sometimes an inline helper or regular function is better
+- Group related extensions in `Extensions.kt` per module
 
-- Write simple, clean, **idiomatic, and concise** Kotlin code
-- Avoid verbose or overly complex solutions
-- Use Kotlin stdlib functions before third-party libraries
-- Follow official Kotlin coding conventions
-- Prefer functional style where appropriate
-- Avoid excessive scope function nesting (`.let{}`, `.apply{}`, etc.)
+### File Organization
+- Don't create excessive files — consolidate related code
+- Remove unnecessary abstractions, interfaces, wrappers
+- One file can contain multiple related classes/functions
+- Minimal file count with clear organization
 
-### Kotlin Multiplatform
+## 3. Concurrency
 
-- Write common code compatible with all JVM and Native targets
-- Use `expect`/`actual` declarations only when platform-specific code is required
-- Prefer common Kotlin libraries over platform-specific ones
+### Coroutines & Virtual Threads
+- Use structured concurrency: `coroutineScope`, `supervisorScope`
+- **JVM-only**: use `newVirtualThreadPerTaskExecutor` based dispatcher — virtual threads can block freely, avoiding unnecessary dispatcher switching
+- Use `suspend` functions when the operation is naturally async or needs cancellation support; for simple blocking JVM calls on virtual threads, direct calls are fine
+- Prefer `Flow` over callbacks or reactive streams
+- Use `Mutex` and `Channel` from kotlinx-coroutines, not Java locks
+- Don't wrap every blocking call in `withContext(Dispatchers.IO)` when already on a virtual-thread dispatcher
 
-### Code Conversion from Other Languages
+## 4. Multiplatform
 
-- **Never** translate code line-by-line from other languages
-- Rewrite code idiomatically using Kotlin's features and conventions
-- Replace loops with stdlib functions (`map`, `filter`, `fold`, etc.)
-- Use Kotlin's null safety, data classes, and extension functions
-- Simplify verbose patterns with concise Kotlin equivalents
-- Leverage stdlib before adding dependencies
+- Default to multiplatform targets unless otherwise stated
+- Common code first, platform code only when necessary
+- Even for JVM-only, prefer kotlinx libraries (`coroutines`, `serialization`, `datetime`, `kotlinx-io`, `ktor`, `kotlin-logging`) for future multiplatform migration
+- JVM-only: stick to JVM target structure, no unnecessary `expect`/`actual`
 
-### Requirements
+## 5. Code Conversion (Java → Kotlin)
 
-- Production-ready code only (no bugs, placeholders, or TODOs)
-- Do not introduce bugs to existing code
-- Use modern Kotlin features from the latest available version
-- Add **concise, clean, idiomatic** error handling
-- Include KDoc comments for public APIs
-- Use meaningful, **concise** variable names
+### Approach
+- **Never file-by-file** — consolidate into clean, idiomatic Kotlin removing unnecessary abstractions
+- Don't follow old Java/J2EE patterns — simplify aggressively
+- **Zero bugs, zero functionality changes** — exactly equivalent
+- **No performance regressions** — improve where possible
 
-### Research & References
+### Specifics
+- `Enumeration`/`Iterator` → Kotlin collections
+- `kotlinx-io` buffers for byte manipulation (unless using Java FFM)
+- Replace Guava/Apache Commons with stdlib
+- `data class`, `sealed class`, `enum class` over verbose Java patterns
+- `object` for singletons, not static utility classes
+- Preserve important existing documentation in migrated code
+- KDoc only where meaningful — skip trivial getters/setters
 
-- Check well-maintained GitHub projects for implementation patterns
-- Verify library usage against official documentation
+## 6. Testing
 
-## Documentation Links
+- Port **all tests** with same coverage and standards
+- `kotlin.test` for multiplatform, JUnit 5+ for JVM-only
+- `kotlinx-coroutines-test` for coroutine testing (`runTest`, `TestDispatcher`)
+- `mockk` only when truly necessary — prefer fakes and test doubles
+- `kotest` assertions for richer matchers
+- Use `@TempDir`, parameterized tests, and JUnit 5 extensions where appropriate
 
-- [Kotlin Docs](https://kotlinlang.org/docs/home.html)
-- [Kotlinx Coroutines](https://github.com/Kotlin/kotlinx.coroutines)
-- [Kotlinx I/O](https://github.com/Kotlin/kotlinx-io)
-- [Amper Build System](https://github.com/JetBrains/amper)
-- [Gradle User Guide](https://docs.gradle.org/current/userguide/userguide.html)
-- [Java 25 API](https://docs.oracle.com/en/java/javase/25/docs/api/index.html)
+## 7. Performance
+
+- Use `Sequence` only for genuinely large collections — don't complicate simple collection chains
+- `inline` for lambdas in hot paths
+- Avoid unnecessary allocations in tight loops
+- `@JvmStatic`, `@JvmField`, `const val` for JVM interop
+- Profile before optimizing — no premature micro-optimization
+
+## 8. Documentation
+
+- KDoc for public APIs and non-obvious logic only
+- Don't document obvious code
+- `@param`, `@return`, `@throws` only when not self-evident
+- Self-documenting code through clear naming
+
+## Reference
+
+- [Kotlin Docs](https://kotlinlang.org/docs/home.html) · [API](https://kotlinlang.org/api/latest/jvm/stdlib/) · [Coding Conventions](https://kotlinlang.org/docs/coding-conventions.html)
+- [Kotlinx Coroutines](https://github.com/Kotlin/kotlinx.coroutines) · [Serialization](https://github.com/Kotlin/kotlinx.serialization) · [I/O](https://github.com/Kotlin/kotlinx-io)
+- [Ktor](https://ktor.io/docs/welcome.html) · [Amper](https://amper.org/dev/)
+- [Java 25 API](https://docs.oracle.com/en/java/javase/25/docs/api/index.html) · [Core Libs](https://docs.oracle.com/en/java/javase/25/core/java-core-libraries1.html) · [Language Changes](https://docs.oracle.com/en/java/javase/25/language/java-language-changes-release.html) · [Dev Guide](https://dev.java/learn/)
